MB-20548: Skip MVCC Snapshots for committed but unflushed transactions

To simplify support of different transaction isolation levels,
and last write wins semantics, transactional mutations are
not inserted into any of the shared WAL snapshot trees.
So even after a transaction commits, MVCC snapshots cannot see
these committed mutations.
So we have to wait until wal flush before using MVCC snapshots again.

Change-Id: I23ef0c700349c476c8c761e9c7f8a1cd1537a0e9
Reviewed-on: http://review.couchbase.org/66751
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>